# qt-lightdm-greeter

./: .cm-cmake-env  CMakeLists.txt  README.md  constants.h  decoratedusersmodel.cpp  decoratedusersmodel.h  logindata.cpp  logindata.h  loginform.cpp  loginform.h  loginform.ui  lxqt-lightdm-greeter.conf  lxqt-lightdm-greeter.desktop  lxqt-lightdm-greeter.qrc  main.cpp  mainwindow.cpp  mainwindow.h  qt-lightdm-greeter.conf  qt-lightdm-greeter.qrc  settings.cpp  settings.h
resources/: documentation.md  lxqt-lightdm-greeter.conf  qt-lightdm-greeter.qss
test/: lightdm.conf  lxqt-lightdm-greeter.desktop  test.sh
